# Ink-Simulation

./: .gitignore  1.ply  CMakeLists.txt  README.md  blenderEx.blend  blenderEx.blend1  ex.ply  ink.cpp  ink.h  main.cpp  mov2mp4.sh  render.py  test.txt  visualizeVelocityField.py
src/: inkSim.cpp  inkSim.h  inkSolver.cpp  main.cpp  system.cpp  system.h  systemHelpers.cpp  waterSolver.cpp
